src/components/Select/styles.module.css
.container {
	position: relative;
	min-width: 0;
	width: 100%;

	& * {
		text-align: left;
	}
}

.drop-down-button {
	display: flex;
	align-items: center;
	gap: var(--spacing-3);
	justify-content: space-between;
	max-width: 100%;
	width: 100%;

	& p {
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}

	& .icon {
		flex-shrink: 0;
	}
}

.options {
	position: absolute;
	width: 100%;
	background-color: var(--default-background-color);
	border-radius: var(--default-border-radius);
	box-shadow: var(--default-box-shadow);
	display: flex;
	flex-direction: column;
	gap: var(--spacing-2);
	padding: var(--spacing-3);
	max-height: 24rem;
	overflow-y: auto;

	& > button {
		padding: var(--spacing-3) var(--spacing-4);

		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;

		&.selected {
			background-color: var(--surface-background-color);
		}
	}

	bottom: 0;
	transform: translateY(100%);
}

